fix footer not visible on mobile devices

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,7 +1,7 @@
 .bg {
   width: 100%;
   height: 100vh;
-  position: fixed;
+  /* position: fixed; */
   top: 0;
   left: 0;
   padding-top: 72px;
